<?xml version="1.0"?>
<package format="2">
  <name>alexandria</name>
  <version>1.0.0</version>
  <description>Alexandria : collection of functions for the neural networks simulator</description>

  <maintainer email="pierre.delarboulas@instar-robotics.com">Pierre Delarboulas</maintainer>
  <license>GPL v3.0</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kheops</url> -->

  <author email="pierre.delarboulas@instar-robotics.com">Pierre Delarboulas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hieroglyph</depend>
  <depend>kheops</depend>
  <depend>joy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
